07/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      hesias.io/application: dashboard
  template:
    metadata:
      labels:
        hesias.io/application: dashboard
        hesias.io/datacenter: clermont-ferrand
    spec:
      containers:
        - name: grafana-container
          image: grafana/grafana
          ports:
            - containerPort: 3000
              name: grafana-http
          volumeMounts:
          - mountPath: /var/lib/grafana
            name: mydata
      volumes:
      - name: mydata
        persistentVolumeClaim:
          claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    hesias.io/application: dashboard
  type: LoadBalancer
  ports:
    - name: grafana-http
      port: 80
      targetPort: 3000
      protocol: TCP
