07/influxdb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb-statefulset
spec:
  replicas: 3
  selector:
    matchLabels:
      hesias.io/application: database
  serviceName: "influxdb-service"
  volumeClaimTemplates:
    - metadata:
        name: mydata
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        hesias.io/application: database
        hesias.io/datacenter: clermont-ferrand
    spec:
      containers:
        - name: influxdb-container
          image: influxdb:1.8
          livenessProbe:
            httpGet:
              path: /health
              port: 8086
          readinessProbe:
            httpGet:
              path: /health
              port: 8086
          volumeMounts:
          - mountPath: /var/lib/influxdb
            name: mydata

---
apiVersion: v1
kind: Service
metadata: 
  name: influxdb-service
spec:
  selector:
    hesias.io/application: database
  ports: 
    - name: influxdb-http
      port: 8086
      targetPort: 8086
      protocol: TCP
